ecomm-ci-cd/back-deployment.yaml
# Backend Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommappback
  template:
    metadata:
      labels:
        app: ecommappback
    spec:
      imagePullSecrets:
        - name: ecr-registry-key
      containers:
        - name: backcontainer
          image: 314146337686.dkr.ecr.us-east-1.amazonaws.com/ecomm.ci.cd.back:0.4.1-125
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ecommbacksvc
spec:
  selector:
    app: ecommappback
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
