ecomm-ci-cd/db-statefulset.yaml
# Postgres StatefulSet
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ecommdb
spec:
  selector:
    matchLabels:
      app: ecommappdb
  serviceName: ecommdbsvc
  replicas: 1
  template:
    metadata:
      labels:
        app: ecommappdb
    spec:
      containers:
        - name: dbcontainer
          image: postgres
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: ecommdbsvc
spec:
  clusterIP: None          
  selector:
    app: ecommappdb        
  ports:
    - port: 5432
      targetPort: 5432
