ecomm-ci-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ecomm.exposed
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommfrontsvc
            port:
              number: 80
